# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX


## [12.65.5] -- 2023-07-11
* ServiceMessageReceiverLoginType Initialisierung über Java Code statt data.sql File durchführen. Damit funktioniert die Initialisierung, egal welche Datenbank verwendet wird

## [12.65.4] -- 2023-07-10
* xpcasInsertAllPrivilegesToUserGroup an neue Tabellenstrukturen anpassen, um Setup-Fehler zu beheben.

## [12.65.3] -- 2023-07-07
* Login erweitern über Value aero.minova.cas.setup.logging.  

## [12.65.2] -- 2023-07-07
* Setup-XMLs vom CAS-App-Projekt vervollständigen, um das Setup von Tabellen zu korrigieren.
Dabei ist herausgekommen, dass `spring.jpa.hibernate.ddl-auto=create` zusammen mit dem Setup nicht funktioniert.
Folglich sollten die Tabellen im CAS oder dessen Erweiterungen,
nicht mit JPA aufgesetzt werden und somit `spring.jpa.hibernate.ddl-auto=none` immer gelten.

## [12.65.1] -- 2023-06-26
* Spring Boot Version erhöhen auf 3.1.1
* Extensions können nun ServiceProperties über das dazugehörige Interface ServicePropertiesRepo abfragen.
* In der Table xtcasCASServices wurde die Spalte ServiceURL von 50 auf 250 Zeichen erhöht.

## [12.65.0] -- 2023-06-21
* QueueService auf JPA umstellen.
* Erweitern des QueueService um BasicAuth und OAuth2.

## [12.64.2] -- 2023-06-20
* JOOQViewService ignoriert Cases -> Bei Privilegienprüfung ist Case egal
* Extensions werden ausgeführt, egal ob Cases der Namen zusammenpassen
* mr-smithers-excellent Release Workflow für Releases verwenden.
* Basis-Test für ViewServiceInterface-Implementierungen

## [12.64.1] -- 2023-06-15
* In CAS Prozeduren die Last* Spalten fühlen, um Truncated Fehler auf Azure zu vermeiden.
* Helper-Version in Manifest an Helper-pom anpassen.
* Gemeinsame GitHub Workflows aus https://github.com/minova-afis/aero.minova.os.github.workflows verwenden.