@@ -62,16 +62,3 @@ Default: `1` +
 // tag::column.LastAction[]
 
 // end::column.LastAction[]
-
-
-=== Zeilen
-
-Folgende Zeilen werden automatisch angelegt:
-
-[options="header"]
-|======
-| KeyLong | KeyText | Description   
-| 1 | form | Form of Menu   
-| 2 | menu | Menu of WFC   
-| 3 | application | General Application Info 
-|======
