@@ -9,6 +9,9 @@ helper-class="aero.minova.cas.app.helper.CASUsersHelper"
 		<column name="Username" text="@xtcasUsers.Username">
 			<text length="50"/>
 		</column>
+		<column name="Description" text="@xtcasUsers.Description">
+			<text length="50"/>
+		</column>
 		<column name="Password" text="@xtcasUsers.Password" visible="false">
 			<text length="100"/>
 		</column>
@@ -19,6 +22,9 @@ helper-class="aero.minova.cas.app.helper.CASUsersHelper"
 				<number/>
 			</field>
 			<field name="Username" sql-index="1" text="@xtcasUsers.Username" required="true" key-type="user">
+				<text length="50"/>
+			</field>
+			<field name="Description" sql-index="3" text="@xtcasUsers.Description" required="false">
 				<text length="50"/>
 			</field>
 			<field name="Password" sql-index="2" text="@xtcasUsers.Password" number-columns-spanned="4" required="true" fill="toright">
