@@ -38,6 +38,7 @@ xtcasUserGroup.LastUser=@LastUser
 
 
 xtcasUsers.Username=@xtcasUser.KeyText
+xtcasUsers.Description=@Description
 xtcasUsers.Password=Password
 
 xtcasAuthorities.Administration=DB User Administration
