@@ -23,7 +23,6 @@ xtcasLuUserPrivilegeUserGroup.RowLevelSecurity=Reihensicherheit
 xtcasUsers.Password=Passwort
 
 
-
 xtcasColumnSecurity=Spaltensicherheit
 xtcasColumnSecurity.TableName=Tabellen Name
 xtcasColumnSecurity.ColumnName=Spalten Name
