@@ -1,7 +1,8 @@
 alter procedure dbo.xpcasInsertUsers (
 	@KeyLong int output,
 	@Username nvarchar(50),
-	@Password nvarchar(100)
+	@Password nvarchar(100),
+	@Description nvarchar(50)
 )
 with encryption as
 	if (exists(select * from xtcasUsers
@@ -21,12 +22,14 @@ with encryption as
 	insert into xtcasUsers (
 		Username,
 		Password,
+		Description,
 		LastAction,
 		LastDate,
 		LastUser
 	) values (
 		@Username,
 		@Password,
+		@Description,
 		1,
 		getDate(),
 		dbo.xfCasUser()
