@@ -1,7 +1,8 @@
 alter procedure dbo.xpcasUpdateUsers (
 	@KeyLong int output,
 	@Username nvarchar(50),
-	@Password nvarchar(100) = null
+	@Password nvarchar(100) = null,
+	@Description nvarchar(50) = null
 )
 with encryption as
 	if exists(select * from xtcasUsers
@@ -15,7 +16,7 @@ with encryption as
 
 	declare @OldPassword nvarchar(100)
 
-	if (len(@Password)<60 or LEFT(@Password, 2)<>'$2')
+	if (@Password is not null and (len(@Password)<60 or LEFT(@Password, 2)<>'$2'))
 	begin
 		raiserror('ADO | 25 | msg.sql.PasswordNotEncrypted!', 16, 1) with seterror
 		return -1
@@ -30,6 +31,7 @@ with encryption as
 	begin 
 		update xtcasUsers
 		set	Password = coalesce(@Password, @OldPassword),
+			Description = @Description,
 			LastAction = 2,
 			LastDate = getDate(),
 			LastUser = dbo.xfCasUser()
