@@ -6,6 +6,9 @@
 	<column name="Username">
 		<varchar length="50" nullable="false"/>
 	</column>
+	<column name="Description">
+		<varchar length="50" nullable="true"/>
+	</column>
 	<column name="Password">
 		<varchar length="100" nullable="false"/>
 	</column>
